--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,13 @@ jobs:
         with:
           type: 'zip'
           filename: 'NeosDocumentImport.zip'
-          path: './release'
+          path: '.'
+          directory: './release'
       - name: upload artifacts
         if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' # only publish workflow artifacts for pushes to main or tags
         uses: actions/upload-artifact@v3
         with:
           name: NeosDocumentImport
           path: |
-            ./NeosDocumentImport.zip
+            ./release/NeosDocumentImport.zip
           if-no-files-found: error
