--- a/NeosDocumentImport/NeosDocumentImport.csproj
+++ b/NeosDocumentImport/NeosDocumentImport.csproj
@@ -46,7 +46,7 @@ copy "$(AssemblyName).dll" "$(NeosPath)\nml_mods\"
       <HintPath>$(NeosPath)\Neos_Data\Managed\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions">
-      <HintPath>..\..\..\..\..\..\Neos\app\Neos_Data\Managed\System.Threading.Tasks.Extensions.dll</HintPath>
+      <HintPath>$(NeosPath)\Neos_Data\Managed\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.ValueTuple">
       <HintPath>$(NeosPath)\Neos_Data\Managed\System.ValueTuple.dll</HintPath>
