--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Fizzler.dll ./release/nml_libs/Fizzler.dll
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Svg.dll ./release/nml_libs/Svg.dll
           
-          sha256sum ./release/*.dll .release/*/*.dll
+          sha256sum ./release/*.dll ./release/*/*.dll
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.0
         with:
