--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ permissions:
 env:
   NeosPath: "${{ github.workspace }}/neos_install/" #see neos-modding-group/neos-plugin-setup-action
   BUILD_TYPE: "CICD"
+  UPLOAD_ARTIFACTS: "${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' }}" # only publish workflow artifacts for pushes to main or tags
 
 jobs:
   build:
@@ -52,7 +53,7 @@ jobs:
           path: '.'
           directory: './release'
       - name: Upload artifacts
-        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' # only publish workflow artifacts for pushes to main or tags
+        if: env.UPLOAD_ARTIFACTS
         uses: actions/upload-artifact@v3
         with:
           name: NeosDocumentImport
