--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,8 @@ permissions:
 env:
   NeosPath: "${{ github.workspace }}/neos_install/" #see neos-modding-group/neos-plugin-setup-action
   BUILD_TYPE: "CICD"
-  UPLOAD_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || contains(github.ref, 'artifact') }} # only publish workflow artifacts for pushes to main or tags
+  PUBLISH_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || contains(github.ref, 'publish-test'}}
+  UPLOAD_ARTIFACTS: ${{ env.PUBLISH_ARTIFACTS == 'true' || github.ref == 'refs/heads/main' || contains(github.ref, 'upload-test') }} # only publish workflow artifacts for pushes to main or tags
 
 jobs:
   build:
