--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
   NeosPath: "${{ github.workspace }}/neos_install/" #see neos-modding-group/neos-plugin-setup-action
   BUILD_TYPE: "CICD"
   PUBLISH_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || contains(github.ref, 'publish-test') }}
-  UPLOAD_ARTIFACTS: ${{ env.PUBLISH_ARTIFACTS == 'true' || github.ref == 'refs/heads/main' || contains(github.ref, 'upload-test') }} # only publish workflow artifacts for pushes to main or tags
+  UPLOAD_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || contains(github.ref, 'publish-test') || github.ref == 'refs/heads/main' || contains(github.ref, 'upload-test') }} # only publish workflow artifacts for pushes to main or tags
 
 jobs:
   build:
@@ -63,7 +63,7 @@ jobs:
           path: ./release/NeosDocumentImport.zip
           if-no-files-found: error
       - name: Create release draft
-        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ env.PUBLISH_ARTIFACTS == 'true' }}
         uses: softprops/action-gh-release@v1
         with:
           files: |
