--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,6 @@ jobs:
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Fizzler.dll ./release/nml_libs/Fizzler.dll
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Svg.dll ./release/nml_libs/Svg.dll
           
-          sha256sum ./release/*.dll ./release/*/*.dll
-          
-          echo "${UPLOAD_ARTIFACTS}"
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.0
         with:
@@ -55,6 +52,8 @@ jobs:
           filename: 'NeosDocumentImport.zip'
           path: '.'
           directory: './release'
+      - name: Calculate SHA256
+        run: sha256sum ./release/*.dll ./release/*/*.dll ./release/*.zip
           
       - name: Upload artifacts (zip)
         if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
